--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
-
+#SERVER 
 server.port=8080
+
+#DATABASE CONFIGURATION
+spring.datasource.driver-class-name:com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/car_viewer
+spring.datasource.username=Irianala
+spring.datasource.password=natolotra
+
+#HIBERNATE
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
